[package]
name = "gestor_claves"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
cocoon = "0.4"       # <-- Nueva: Para encriptar
rpassword = "7.0"    # <-- Nueva: Para pedir password oculto
arboard = "3.2"  # <-- ¡NUEVA! Para manejar el portapapeles